fix: index + 路徑

--- a/js-色辨遊戲-進階.html
+++ b/js-色辨遊戲-進階.html
@@ -88,7 +88,7 @@
 
         <div id="cube-box"></div>
 
-        <a href="./js-遊戲開始頁.html">
+        <a href="./index.html">
             <button type="button">回選擇頁</button>
         </a>
     </section>
