--- a/js-色辨遊戲-初級.html
+++ b/js-色辨遊戲-初級.html
@@ -66,7 +66,7 @@
     <section id="container">
         <div id="cube-box"></div>
 
-        <a href="./js-遊戲開始頁.html">
+        <a href="./index.html">
             <button type="button">回選擇頁</button>
         </a>
     </section>
